<resources>
    <string name="app_name">Ema\'s Restaurant</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ema\'s Restaurant</string>
    <string name="nav_header_subtitle">Meals and delivery services</string>
    <string name="nav_header_desc">Feedback</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_test1">Test1</string>
    <string name="menu_test2">Test2</string>
    <string name="menu_test3">Test3</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow111</string>
    <string name="menu_menu">menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fast_food">Fast food</string>
    <string name="id_fast_food">Fast food</string>
    <string name="menu_coupons">Coupons</string>
    <string name="Menu">Menu</string>
    <string name="my_orders">My orders</string>
    <string name="my_account">My account</string>
    <string name="feedback">Feedback</string>
    <string name="my_account_f">MY ACCOUNT</string>

    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="m_web">www.ema.com</string>
    <string name="m_mail">info@ema.com</string>
    <string name="home_fragment">Home Fragment</string>
</resources>