<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_coupons"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_coupons" />
        <item
            android:id="@+id/nav_account"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/feedback" />
    </group>

</menu>